# kurigram-addons

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  create_readme.py  mkdocs.yml  pyproject.toml  shell.nix  showcase_bot.py  x.py
.github/workflows/: deploy.yml  deploy_docs.yml  docs.yml
.poetry-cache/artifacts/03/2c/f4/c59163b3c528fe7f184d264aa4294be9bdb9860df6182b9efb4a427687/: pyaes-1.6.1-py3-none-any.whl
.poetry-cache/artifacts/1c/07/1b/498e45250a7b6a8a839192cca371a4cf78c06c22bb5d7e505d75da4293/: coverage-7.10.6-cp312-cp312-manylinux1_x86_64.manylinux_2_28_x86_64.manylinux_2_5_x86_64.whl
.poetry-cache/artifacts/2a/d5/63/d1311b487e8f2c5e12860d7b47f787ccb0e645d6190eb015744c714205/: pre_commit-4.3.0-py2.py3-none-any.whl
docs/: app.config.ts  index.md  package-lock.json  package.json  tsconfig.json
docs/.vinxi/prerender/: index.mjs
docs/.vinxi/prerender/chunks/nitro/: nitro.mjs  nitro.mjs.map
docs/api/: pykeyboard.md  pyrogram_patch.md
docs/guide/: integration-playbook.md  pykeyboard-overview.md  pyrogram-patch-overview.md
docs/learnings/: index.md
docs/pyrogram_patch-main.zip_unzipped/pyrogram_patch-main/pyrogram_patch/router/patched_decorators/: on_message.py  (+11 more)
docs/src/: app.css  app.tsx  entry-server.tsx
docs/src/components/: ApiItem.tsx  Callout.tsx  CodeBlock.tsx  Header.tsx  Layout.tsx  Logo.tsx  Sidebar.tsx  TableOfContents.tsx  ThemeToggle.tsx
docs/src/routes/: getting-started.tsx  index.tsx  migration.tsx
docs/src/routes/api/: builder.tsx  factory.tsx  fsm.tsx  hooks.tsx  index.tsx  inline-keyboard.tsx  middleware-manager.tsx  patch-data-pool.tsx  patch-manager.tsx  pykeyboard.tsx  reply-keyboard.tsx  router.tsx
docs/src/routes/kurigram-addons/: broadcast.tsx  client.tsx  command-parser.tsx  conversation.tsx  depends.tsx  health.tsx  i18n.tsx  index.tsx  menu.tsx  rate-limit.tsx  testing.tsx
docs/src/routes/pykeyboard/: callback-data.tsx  factory.tsx  index.tsx  inline.tsx  installation.tsx  languages.tsx  pagination.tsx  quickstart.tsx  reply-keyboard.tsx  reply.tsx  utilities.tsx
docs/src/routes/pyrogram-patch/: configuration.tsx  fsm.tsx  index.tsx  middlewares.tsx  patching.tsx  router.tsx  routers.tsx  tutorial.tsx
docs/src/routes/pyrogram-patch/fsm/: history.tsx  states.tsx
docs/src/routes/pyrogram-patch/middleware/: index.tsx  per-handler.tsx  rate-limit.tsx  writing.tsx
docs/src/routes/pyrogram-patch/storage/: custom.tsx  index.tsx  memory.tsx  redis.tsx  sqlite.tsx
docs/src/routes/v0.3/: index.tsx
docs/src/routes/v0.3/pykeyboard/: builder.tsx  hooks.tsx  index.tsx  pagination.tsx  reply-keyboard.tsx
docs/src/routes/v0.3/pyrogram-patch/: circuit-breaker.tsx  configuration.tsx  fsm.tsx  index.tsx  middleware.tsx  router.tsx  storage.tsx
docs/src/routes/v0.4/: getting-started.tsx  index.tsx
docs/src/routes/v0.4/api/: pyrogram-patch.tsx
docs/src/routes/v0.4/kurigram-addons/: client.tsx  command-parser.tsx  flood-wait.tsx  index.tsx  lifecycle-hooks.tsx  rate-limit.tsx
docs/src/routes/v0.4/pykeyboard/: builder.tsx  hooks.tsx  index.tsx  inline-keyboard.tsx
docs/src/routes/v0.4/pyrogram-patch/: circuit-breaker.tsx  configuration.tsx  errors.tsx  index.tsx  patch-helper.tsx  router.tsx
docs/stylesheets/: extra.css
docs/tutorials/: build-an-adaptive-keyboard.md  index.md  instrument-your-bot.md  pyrogram-keyboard-quickstart.md
examples/: MRE.py
kurigram/: __init__.py  client.py  command_parser.py  conversation.py  depends.py  flood_wait.py  menu.py  rate_limit.py
kurigram_addons/: __init__.py  broadcast.py  client.py  command_parser.py  conversation.py  depends.py  health.py  i18n.py  menu.py  rate_limit.py  testing.py
pykeyboard/: README.md  __init__.py  builder.py  button_style.py  callback_data.py  errors.py  hooks.py  inline_keyboard.py  keyboard_base.py  presets.py  reply_keyboard.py  utils.py  visualization.py
pyrogram_patch/: DOCUMENTATION.md  README.md  __init__.py  addons.py  circuit_breaker.py  config.py  di.py  dispatcher.py  errors.py  health.py  metrics.py  patch.py  patch_data_pool.py  patch_helper.py  plugins.py
pyrogram_patch/fsm/: __init__.py  base_storage.py  context.py  context_manager.py  filter.py  states.py
pyrogram_patch/fsm/storages/: __init__.py  custom_storage.py  memory_storage.py  mongo_storage.py  redis_storage.py  sqlite_storage.py
pyrogram_patch/middlewares/: __init__.py  context.py  fsm_inject.py  middleware_manager.py  per_handler.py  rate_limit.py
pyrogram_patch/middlewares/middleware_types/: __init__.py  middlewares.py
pyrogram_patch/router/: __init__.py  router.py  router.pyi
pyrogram_patch/router/patched_decorators/: __init__.py  decorators.py  factory.py  on_callback_query.py  on_chat_join_request.py  on_chat_member_updated.py  on_chosen_inline_result.py  on_deleted_messages.py  on_disconnect.py  on_edited_message.py  on_inline_query.py  on_message.py  on_poll.py  on_raw_update.py  on_user_status.py
scripts/: patch-v03x-sidebar.js
tests/: conftest.py  test_dispatcher.py  test_health.py  test_patch_data_pool.py  test_pykeyboard_features.py  test_redis_storage.py
tests/integration/: test_router_integration.py
tests/unit/: test_custom_storage.py  test_fsm.py  test_memory_storage.py  test_middleware.py  test_patch_data_pool.py  test_patch_helper.py  test_patch_manager.py  test_redis_storage.py
(+10 files in other folders)
