[project]
name = "kurigram-addons"
dynamic = ["classifiers"]
version = "0.2.1"
description = "A collection of useful addons for the Kurigram library"
authors = [
    {name = "Johnnie",email = "johnnie610@duck.com"}
]
license = {text = "MIT"}
requires-python = ">=3.10,<4.0"
keywords = ["kurigram", "addons", "pykeyboard", "pyrogram-patch"]
readme = "README.md"

[tool.poetry]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]
packages = [
    {include = "pykeyboard"},
    {include = "pyrogram_patch"},
]

[project.urls]
repository = "https://github.com/johnnie-610/kurigram-addons"
bugs = "https://github.com/johnnie-610/kurigram-addons/issues"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
kurigram = "^2.2.6"
pre-commit = "^4.2.0"
pytest = "^7.4.0"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
pytest-mock = "^3.11.1"
pytest-xdist = "^3.3.1"
coverage = "^7.2.7"
pytest-timeout = "^2.1.0"
pytest-benchmark = "^4.0.0"
pytest-env = "^1.1.3"
pytest-sugar = "^0.9.7"
redis = "^6.2.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*", "*test_*"]
python_classes = ["Test*", "*Test*"]
addopts = "-v -s --asyncio-mode=auto"
asyncio_mode = "auto"

