[project]
name = "kurigram-addons"
version = "0.4.1"
description = "A collection of useful addons for the Kurigram library"
readme = "README.md"
requires-python = ">=3.10,<4.0"
license = "MIT"
authors = [{ name = "Johnnie", email = "johnnie610@duck.com" }]
keywords = ["kurigram", "addons", "pykeyboard", "pyrogram-patch"]

dependencies = [
    "kurigram>=2.1.35",
    "redis>=6.0.0",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
]

[project.urls]
Repository = "https://github.com/johnnie-610/kurigram-addons"
Issues = "https://github.com/johnnie-610/kurigram-addons/issues"
Documentation = "https://johnnie-610.github.io/kurigram-addons/"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

# Tool Specific Configurations
[tool.poetry]
packages = [
    { include = "kurigram_addons" },
    { include = "pykeyboard" },
    { include = "pyrogram_patch" },
]

# testing
[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
pytest-mock = "^3.11.1"
pytest-xdist = "^3.3.1"
pytest-timeout = "^2.1.0"
pytest-benchmark = "^4.0.0"
pytest-env = "^1.1.3"
pytest-sugar = "^0.9.7"
coverage = "^7.2.7"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*", "*test_*"]
python_classes = ["Test*", "*Test*"]
# 'asyncio_mode' is deprecated as a standalone key in newer pytest-asyncio; 
# passing it via addopts is safer.
addopts = "-v -s --asyncio-mode=auto"

[tool.ruff]
line-length = 80
target-version = "py310"

[tool.ruff.lint]
# Enable Pyflakes (F), pycodestyle (E, W), and isort (I)
select = ["F", "E", "W", "I"]
